# advent-of-fpga-2025

./: .gitignore  README.md  advent_of_fpga.opam
src/: aoc_solver.ml  aoc_solver.mli  axi_adapter.ml  axi_wrapper.ml  axi_wrapper.mli  dune
test/: dune  test_aoc_solver.ml
verilog/: aoc_solver.v  solver.v
xilinx/: aoc_solver_ip_slave_lite_v1_0_S00_AXI.v  main.c  main.h
